--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: stablecog
+namespace: mixpanel-proxy
 resources:
   - deployment.yaml
   - svc.yaml
